go.blog: fix typo in normalization article table
R=rsc
https://codereview.appspot.com/33630044

--- a/content/normalization/table1.html
+++ b/content/normalization/table1.html
@@ -14,7 +14,7 @@
 	</tr>
 	<tr>
 		<th>Compatibility equivalence</th>
-		<td>NFK</td>
-		<td>NFK</td>
+		<td>NFKC</td>
+		<td>NFKD</td>
 	</tr>
 </table>
